change auth controller
